--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -6,7 +6,7 @@
   </ng-template>
   <ng-template *ngIf="published" pTemplate="icons" class="doilink">
     <h5 class="p-my-0"> DOI: <a class="doilink" target="_blank"
-                              href="{{this.getDoiPrefix()}}{{ validationRun.doi }}">{{ validationRun.doi }}</a>
+                                href="{{this.getDoiPrefix()}}{{ validationRun.doi }}">{{ validationRun.doi }}</a>
     </h5>
   </ng-template>
   <!--  CUSTOM    -->
@@ -14,16 +14,17 @@
     <h5 class="p-my-0">
       <!--      if there is expiry date property: -->
       <span *ngIf="validationRun.expiry_date">
-          <span *ngIf="validationRun.is_near_expiry" class="p-panel-header-icon pi pi-exclamation-triangle expiry-icons"
+          <span *ngIf="validationRun.is_near_expiry && validationRun.progress === 100" class="p-panel-header-icon pi pi-exclamation-triangle expiry-icons"
                 title="'This validation will SOON be automatically removed during cleanup on {{ validationRun.expiry_date|date: dateFormat :timeZone}} {{timeZone}}."></span>
-          <span *ngIf="!validationRun.is_near_expiry" class="p-panel-header-icon pi pi-calendar expiry-icons"
+          <span *ngIf="!validationRun.is_near_expiry && validationRun.progress === 100" class="p-panel-header-icon pi pi-calendar expiry-icons"
                 title="This validation will be automatically removed during cleanup on {{ validationRun.expiry_date|date: dateFormat :timeZone }} {{timeZone}}.">
+          </span>
+          <span *ngIf="validationRun.progress === -1" class="p-panel-header-icon pi pi-ban expiry-icons"
+                        title="This validation was cancelled.">
           </span>
       </span>
       <!--      if there is no expiry date property: -->
       <span *ngIf="!validationRun.expiry_date">
-          <span *ngIf="validationRun.progress === -1" class="p-panel-header-icon pi pi-ban expiry-icons"
-                title="This validation was cancelled."></span>
           <span *ngIf="!validationRun.end_time && validationRun.progress <= 100"
                 class="p-panel-header-icon pi pi-spin pi-spinner expiry-icons"
                 title="This validation is still running."></span>
