refreshing status automatically added

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -135,7 +135,7 @@
       <!--    CUSTOM -->
       <div *ngIf="!published">
         <strong>Status:</strong><br/>
-        {{ getStatusFromProgress(validationRun)}}
+        {{validationStatus$|async}}
       </div>
     </div>
 
