--- a/UI/src/app/modules/comparison/components/comparison-summary/comparison-summary.component.html
+++ b/UI/src/app/modules/comparison/components/comparison-summary/comparison-summary.component.html
@@ -20,7 +20,7 @@
         <tbody>
         <tr>
           <td *ngFor="let validationModel of valResModels" class="p-py-0 p-px-0">
-            <qa-validation-summary [validationModel]="validationModel" [forComparison]="true"></qa-validation-summary>
+            <qa-validation-summary *ngIf="validationModel.validationRun|async as valRun" [validationModel]="validationModel" [validationRun]="valRun" [forComparison]="true"></qa-validation-summary>
           </td>
         </tr>
         </tbody>
