--- a/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
@@ -1,11 +1,32 @@
 <div class="p-grid no-gutters">
   <div class="p-col-12">
-    <p-checkbox label="Depth range selector"
+    <p-checkbox label="Use measurements at given depth"
                 [binary]="true" [ngModel]="true" readonly="true">
     </p-checkbox>
     <a (click)="dialogVisible=true"><i class="pi pi-cog" style="padding-left: 5px;cursor: pointer;"></i></a>
   </div>
 </div>
-<p-dialog header="Set depth range" position="top" [(visible)]="dialogVisible">
-  <p>Depth selector</p>
+
+<p-dialog header="Select measurements depth range" position="top" [(visible)]="dialogVisible">
+  <p>Choose a range to include measurements done only at a<br> particular depth range.<br>
+    The filter will be applied to all stations in all chosen networks.</p>
+  <div class="p-grid">
+    <div class="p-col-12">
+      <div class="p-float-label">
+        <p-inputNumber id="depthFromInput"  [minFractionDigits]="1" [maxFractionDigits]="2" suffix=" m" [(ngModel)]="editFrom"></p-inputNumber>
+        <label for="depthFromInput">Depth from</label>
+      </div>
+    </div>
+    <div class="p-col-12">
+      <div class="p-float-label">
+        <p-inputNumber id="depthToInput" [minFractionDigits]="1" [maxFractionDigits]="2" suffix=" m" [(ngModel)]="editTo"></p-inputNumber>
+        <label for="depthToInput">Depth to</label>
+      </div>
+    </div>
+    <div class="p-col-12">
+      <p-button label="OK" (onClick)="saveNewValues()"></p-button>
+    </div>
+  </div>
+
+
 </p-dialog>
