--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -34,7 +34,7 @@
                   [isIncluded]="isIncluded(filter.filterDto.id, item.basicFilters)"
                   [filterModel]="filter"
                   (onExcludeMutual)="this.excludeFilter($event, item.basicFilters)"
-                  (onIncludeMutual)="this.includeFilter($event, item.basicFilters, filter.enabled$)">
+                  (onIncludeMutual)="this.includeFilter($event, item.basicFilters, filter.enabled)">
                 </qa-basic-filter>
               </ng-container>
 
@@ -88,7 +88,7 @@
                 [ngClass]="isIncluded(filter.filterDto.id, validationModel.referenceConfigurations[0].basicFilters) == true ? 'ml-1' : ''"
                 [filterModel]="filter"
                 (onExcludeMutual)="this.excludeFilter($event, validationModel.referenceConfigurations[0].basicFilters)"
-                (onIncludeMutual)="includeFilter($event, validationModel.referenceConfigurations[0].basicFilters, filter.enabled$)">
+                (onIncludeMutual)="includeFilter($event, validationModel.referenceConfigurations[0].basicFilters, filter.enabled)">
               </qa-basic-filter>
 
             </ng-container>
