--- a/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
@@ -1,9 +1,9 @@
 <div class="p-grid no-gutters">
   <div class="p-col-12">
-    <p-checkbox label="Use measurements at given depth"
+    <p-checkbox label="Use measurements at given depth: "
                 [binary]="true" [ngModel]="true" readonly="true">
     </p-checkbox>
-    <a (click)="dialogVisible=true"><i class="pi pi-cog" style="padding-left: 5px;cursor: pointer;"></i></a>
+    <a (click)="dialogVisible=true"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
 </div>
 
