--- a/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
@@ -1,7 +1,7 @@
 <div class="p-grid no-gutters">
   <div class="p-col-12">
     <p-checkbox label="Use measurements at given depth: "
-                [binary]="true" [ngModel]="true" readonly="true">
+                [binary]="true" [ngModel]="true" readonly="true" class="param-filter-checkbox">
     </p-checkbox>
     <a (click)="dialogVisible=true"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
