--- a/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-network-filter/ismn-network-filter.component.html
@@ -1,7 +1,7 @@
 <div class="p-grid no-gutters">
   <div class="p-col-12">
-    <p-checkbox label="Network filter:"
-                [binary]="true" [ngModel]="true" readonly="true">
+    <p-checkbox label="Use ISMN Networks:"
+                [binary]="true" [ngModel]="true" readonly="true" class="param-filter-checkbox">
     </p-checkbox>
     <a (click)="showNetworkSelector()"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
