--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -519,6 +519,11 @@ p-cascadeselect.ng-dirty.ng-invalid > .p-cascadeselect {
   background: #007bff;
 }
 
+.param-filter-checkbox .p-checkbox-box.p-highlight{
+  border-color: rgba(0, 123, 255, 0.16);
+  background: rgba(0, 123, 255, 0.6);
+}
+
 .p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
   border-color: #ced4da;
 }
@@ -535,6 +540,12 @@ p-cascadeselect.ng-dirty.ng-invalid > .p-cascadeselect {
   background: #0062cc;
   color: #ffffff;
 }
+
+.param-filter-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-highlight:hover{
+  border-color: rgba(0, 123, 255, 0.16);
+  background: rgba(0, 123, 255, 0.6);
+}
+
 
 p-checkbox.ng-dirty.ng-invalid > .p-checkbox > .p-checkbox-box {
   border-color: #dc3545;
