--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -4118,6 +4118,10 @@ div.carousel-caption{
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
+#ismn-depth-selector .p-dialog {
+  width: 550px;
+}
+
 .p-dialog .p-dialog-header {
   border-bottom: 1px solid #e9ecef;
   background: $base-color;
