--- a/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
+++ b/UI/src/app/modules/filter/components/ismn-depth-filter/ismn-depth-filter.component.html
@@ -1,32 +1,59 @@
 <div class="p-grid no-gutters">
   <div class="p-col-12">
-    <p-checkbox label="Use measurements at given depth"
-                [binary]="true" [ngModel]="true" readonly="true">
+    <p-checkbox label="Use measurements at given depth: "
+                [binary]="true" [ngModel]="true" readonly="true" class="param-filter-checkbox">
     </p-checkbox>
-    <a (click)="dialogVisible=true"><i class="pi pi-cog" style="padding-left: 5px;cursor: pointer;"></i></a>
+    <a (click)="dialogVisible=true"><span style="padding-left: 5px;cursor: pointer;">select...</span></a>
   </div>
 </div>
 
-<p-dialog header="Select measurements depth range" position="top" [(visible)]="dialogVisible">
-  <p>Choose a range to include measurements done only at a<br> particular depth range.<br>
-    The filter will be applied to all stations in all chosen networks.</p>
-  <div class="p-grid">
-    <div class="p-col-12">
-      <div class="p-float-label">
-        <p-inputNumber id="depthFromInput"  [minFractionDigits]="1" [maxFractionDigits]="2" suffix=" m" [(ngModel)]="editFrom"></p-inputNumber>
-        <label for="depthFromInput">Depth from</label>
+<p-dialog id="ismn-depth-selector" header="Select measurements depth range" position="top" [(visible)]="dialogVisible">
+  <div class="p-pb-3 p-pl-0"> Choose a range to include measurements done only at a<br> particular depth range.<br>
+    The filter will be applied to all stations in all chosen networks.</div>
+  <div class="p-grid" style="display: flex">
+    <div class="p-col-12 p-pl-3">
+      <div class="p-grid"  id="depthFromInput">
+        <div class="p-col-2 p-px-0">
+          <div class="p-fluid">
+            <div>Depth from: </div>
+          </div>
+        </div>
+        <div class="p-col-3 p-mx-0 p-px-0 p-fluid">
+          <p-inputNumber
+            [minFractionDigits]="1"
+            [maxFractionDigits]="2" suffix=" m"
+            [(ngModel)]="editFrom"
+            [showButtons]="true"
+            [step]="0.01"
+            [min]="0"
+            decrementButtonClass="changeValueButton">
+          </p-inputNumber>
+        </div>
       </div>
     </div>
-    <div class="p-col-12">
-      <div class="p-float-label">
-        <p-inputNumber id="depthToInput" [minFractionDigits]="1" [maxFractionDigits]="2" suffix=" m" [(ngModel)]="editTo"></p-inputNumber>
-        <label for="depthToInput">Depth to</label>
+
+    <div class="p-col-12 p-pl-3">
+      <div class="p-grid"  id="depthToInput">
+        <div class="p-col-2 p-px-0">
+          <div class="p-fluid">
+            <div>Depth to: </div>
+          </div>
+        </div>
+        <div class="p-col-3 p-mx-0 p-px-0 p-fluid">
+          <p-inputNumber
+            [minFractionDigits]="1"
+            [maxFractionDigits]="2" suffix=" m"
+            [(ngModel)]="editTo"
+            [showButtons]="true"
+            [step]="0.01"
+            [min]="0">
+          </p-inputNumber>
+        </div>
       </div>
     </div>
+
     <div class="p-col-12">
       <p-button label="OK" (onClick)="saveNewValues()"></p-button>
     </div>
   </div>
 
-
-</p-dialog>
