help page updated

--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -79,22 +79,22 @@
     you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;.
     You can also hover your mouse pointer over the question mark next to a filter
     to get a short explanation. <br>
-    <span style="color: red">
+    <span>
     If the reference dataset is ISMN you can also choose specific networks and/or measurements in a defined depth range.
     To do that you have to open an appropriate window by clicking a 'select...' link next to the filter you want to parameterised.
     </span>
   </p>
   <img  alt='ismn networks' class="scaled_image mb-3" [src]="ismnNetworks">
-  <p style="color: red">
-    The window for choosing networks contains a list of continents. When clicking a continent name a list of networks that belong to the continent unfolds.
+  <p>
+    The window for choosing networks contains a list of continents. When clicking an arrow next to a continent name a list of networks that belong to the continent unfolds.
     Next to each network there is the name of the country it belongs to. To toggle the particular network it is enough to click on its name.
-    The choice has to be approved by clicking the 'Use networks' button.
+    The choice doesn't have to be approved, it is enough to close the dialog window and the choice will be saved.
   </p>
   <img alt="ismn depths" class="scaled_image mb-3" [src]="ismnDepths">
   <p>
-    <span style="color: red">
-    The window for the depth selection contains two fields for introducing the depth range.
-    Again, the choice has to be accepted by clicking the 'Use depth range' button.
+    <span>
+    The window for the depth selection contains two fields for introducing the depth range. Values have to be introduced in meters.
+    The choice can to be accepted by clicking the 'OK' button or simply by closing the dialog window.
     </span>
     <br>
     <br>
