--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -113,7 +113,7 @@
       <div class="p-py-3">
         <span class="p-float-label">
           <input class="form-field" id="orcid" type="text" pInputText formControlName="orcid">
-          <label for="orcid">Orcid</label>
+          <label for="orcid">ORCID</label>
           <span title="Optional. Your ORCID identifier from https://orcid.org/, e.g. 0000-0002-1825-0097. Will be used to identify you as the author if you publish results to zenodo through QA4SM."
                 class="pi pi-question-circle">
           </span>
