--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -4825,6 +4825,18 @@ div.carousel-caption{
   background: #F8C100;
 }
 
+.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link-active {
+  background: #F8C100;
+}
+
+.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link-active .p-menuitem-text {
+  color: #ffffff;
+}
+
+.p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link-active .p-menuitem-icon {
+  color: #ffffff;
+}
+
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover .p-menuitem-text {
   color: #ffffff;
 }
