title changed into pTooltip

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -160,7 +160,7 @@
                  [ngModel]="validationModel.nameTag$|async"
                  (ngModelChange)="validationModel.nameTag$.next($event)">
           <span
-            title="You can optionally name the validation to make it easier to identify in your list of validations."
+            pTooltip="You can optionally name the validation to make it easier to identify in your list of validations."
             class="pi pi-question-circle p-col-1 help-field">
           </span>
         </div>
