--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -9,7 +9,7 @@
         <span class="p-float-label">
           <input class="form-field" id="username" type="text" pInputText formControlName="username">
           <label for="username">Username</label>
-          <span title="Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only."
+          <span pTooltip="Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only."
                 class="pi pi-question-circle">
           </span>
         </span>
@@ -23,7 +23,7 @@
         <span class="p-float-label">
           <input class="form-field" id="password" type="password" pInputText formControlName="password1" autocomplete="new-password">
           <label for="password">Password</label>
-          <span title="Your password can't be too similar to your other personal information.Your password must contain at least 8 characters. Your password can't be a commonly used password. Your password can't be entirely numeric."
+          <span pTooltip="Your password can't be too similar to your other personal information.Your password must contain at least 8 characters. Your password can't be a commonly used password. Your password can't be entirely numeric."
                 class="pi pi-question-circle">
           </span>
         </span>
@@ -37,7 +37,7 @@
         <span class="p-float-label">
           <input class="form-field" id="password-confirm" type="password" pInputText formControlName="password2">
           <label for="password-confirm">Password confirmation</label>
-          <span title="Enter the same password as before, for verification."
+          <span pTooltip="Enter the same password as before, for verification."
                 class="pi pi-question-circle">
           </span>
         </span>
@@ -51,7 +51,7 @@
         <span class="p-float-label">
           <input class="form-field" id="email" type="email" pInputText formControlName="email">
           <label for="email">Email address</label>
-          <span title="Required. A valid email address where you can receive notifications about validations."
+          <span pTooltip="Required. A valid email address where you can receive notifications about validations."
                 class="pi pi-question-circle">
           </span>
         </span>
@@ -65,7 +65,7 @@
         <span class="p-float-label">
           <input class="form-field" id="first-name" type="text" pInputText formControlName="first_name">
           <label for="first-name">First name</label>
-          <span title="Optional."
+          <span pTooltip="Optional."
                 class="pi pi-question-circle">
           </span>
         </span>
@@ -75,7 +75,7 @@
         <span class="p-float-label">
           <input class="form-field" id="last-name" type="text" pInputText formControlName="last_name">
           <label for="last-name">Last name</label>
-          <span title="Optional."
+          <span pTooltip="Optional."
                 class="pi pi-question-circle">
           </span>
         </span>
@@ -85,7 +85,7 @@
         <span class="p-float-label">
           <input class="form-field" id="organisation" type="text" pInputText formControlName="organisation">
           <label for="organisation">Organisation</label>
-          <span title="Optional. The organisation (university, company, etc.) you work for or represent."
+          <span pTooltip="Optional. The organisation (university, company, etc.) you work for or represent."
                 class="pi pi-question-circle">
           </span>
         </span>
@@ -103,7 +103,7 @@
                       ngDefaultControl>
           </p-dropdown>
           <label>Country</label>
-          <span title="Optional. The country where your organisation (or you) resides."
+          <span pTooltip="Optional. The country where your organisation (or you) resides."
                 class="pi pi-question-circle"
                 id="countryHelp">
           </span>
@@ -114,7 +114,7 @@
         <span class="p-float-label">
           <input class="form-field" id="orcid" type="text" pInputText formControlName="orcid">
           <label for="orcid">ORCID</label>
-          <span title="Optional. Your ORCID identifier from https://orcid.org/, e.g. 0000-0002-1825-0097. Will be used to identify you as the author if you publish results to zenodo through QA4SM."
+          <span pTooltip="Optional. Your ORCID identifier from https://orcid.org/, e.g. 0000-0002-1825-0097. Will be used to identify you as the author if you publish results to zenodo through QA4SM."
                 class="pi pi-question-circle">
           </span>
         </span>
