--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -104,7 +104,7 @@
           </p-dropdown>
           <label>Country</label>
           <span pTooltip="Optional. The country where your organisation (or you) resides."
-                class="pi pi-question-circle"
+                [ngClass]="{'pi pi-question-circle': true, 'verticalAlign': this.userForm.controls.country.value==''}"
                 id="countryHelp">
           </span>
         </div>
