title changed into pTooltip, lifetime added

--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -29,7 +29,8 @@
                         icon="pi pi-download"
                         label="Download .csv table"
                         class="btn-action-large"
-                        title="Download the table to a .csv file"
+                        pTooltip="Download the table to a .csv file"
+                        life="2000"
                         (click)="getSummaryStatisticsAsCsv()">
                 </button>
               </div>
