--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -115,7 +115,7 @@
             routerLink="/validate/"
             class="btn-action"
             [queryParams]="{validation_id: validationRun.id}"
-            pTooltip="Load validation settings"
+            pTooltip="Loading settings will redirect you to the validate page"
             [life]="tooltipLifetime"
             icon="pi pi-replay">
       </button>
