title changed into pTooltip

--- a/UI/src/app/modules/validation-result/components/publishing/publishing.component.html
+++ b/UI/src/app/modules/validation-result/components/publishing/publishing.component.html
@@ -28,7 +28,7 @@
                     pInputText
                     formControlName="title">
           </textarea>
-          <span title="Title of the Zenodo entry"
+          <span pTooltip="Title of the Zenodo entry"
                 class="pi pi-question-circle p-col-1 help-field">
           </span>
         </div>
@@ -43,7 +43,7 @@
                     pInputText
                     formControlName="description">
           </textarea>
-          <span title="Description of the Zenodo entry"
+          <span pTooltip="Description of the Zenodo entry"
                 class="pi pi-question-circle p-col-1 help-field">
           </span>
         </div>
@@ -60,7 +60,7 @@
             formControlName="keywords">
           </textarea>
           <span
-            title="Comma-separated list of keywords to make your results easily searchable; must contain keyword 'qa4sm'"
+            pTooltip="Comma-separated list of keywords to make your results easily searchable; must contain keyword 'qa4sm'"
             class="pi pi-question-circle p-col-1 help-field">
           </span>
         </div>
@@ -75,7 +75,7 @@
           <label for="name">Name</label>
         </span>
           <input class="form-field p-col" id="name" type="text" pInputText formControlName="name">
-          <span title="Your name; format: Lastname, Firstnames"
+          <span pTooltip="Your name; format: Lastname, Firstnames"
                 class="pi pi-question-circle p-col-1 help-field">
           </span>
 
@@ -86,7 +86,7 @@
           <label for="affiliation">Affiliation</label>
         </span>
           <input class="form-field p-col" id="affiliation" type="text" pInputText formControlName="affiliation">
-          <span title="Your organisation or other affiation, optional"
+          <span pTooltip="Your organisation or other affiation, optional"
                 class="pi pi-question-circle p-col-1 help-field">
           </span>
         </div>
@@ -96,7 +96,7 @@
           <label for="orcid">ORCID</label>
         </span>
           <input class="form-field p-col" id="orcid" type="text" pInputText formControlName="orcid">
-          <span title="Your personal ORCID id, optional"
+          <span pTooltip="Your personal ORCID id, optional"
                 class="pi pi-question-circle p-col-1 help-field">
           </span>
 
